--- a/P006946.opf/meta.yml
+++ b/P006946.opf/meta.yml
@@ -3,5 +3,17 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W30441
   title: དབུ་མའི་ཟབ་གནད་སྙིང་པོར་དྲིལ་བའི་ལེགས་བཤད
-  volume: ''
+  volume:
+    8a2d52cc00e34eb985a2fc851ec418c5:
+      image_group_id: I1PD30297
+      title: Volume 1 of dbu ma'i zab gnad snying por dril ba'i legs bshad
+      volume_number: 1
+      total_pages: 178
   author: ''
+ebook_metadata:
+  title: དབུ་མའི་ཟབ་གནད་སྙིང་པོར་དྲིལ་བའི་ལེགས་བཤད
+  author: ''
+  sku: P006946
+  cover: cover.jpg
+  layers:
+  - pagination
