volumes of meta updated

--- a/P006946.opf/meta.yml
+++ b/P006946.opf/meta.yml
@@ -5,12 +5,11 @@ source_metadata:
   title: དབུ་མའི་ཟབ་གནད་སྙིང་པོར་དྲིལ་བའི་ལེགས་བཤད
   author: ''
   volumes:
-    8a2d52cc00e34eb985a2fc851ec418c5:
+    ecb194bc19014824b2d8ccea6c74984d:
       image_group_id: I1PD30297
-      title: Volume 1 of dbu ma'i zab gnad snying por dril ba'i legs bshad
+      title: ''
       volume_number: 1
       total_pages: 178
-      base_file: v001.txt
 ebook_metadata:
   title: དབུ་མའི་ཟབ་གནད་སྙིང་པོར་དྲིལ་བའི་ལེགས་བཤད
   author: ''
