--- a/P006946.opf/layers/v001/Pagination.yml
+++ b/P006946.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 107fbc25f48d40b59770a1ad58d834a4
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   00645f580dd147d0a08f1824050f8246:
