--- a/P006946.opf/meta.yml
+++ b/P006946.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P006946
 initial_creation_type: ocr
 created_at: 28/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 12:32:14.765686
 source_metadata:
   id: bdr:W30441
   title: དབུ་མའི་ཟབ་གནད་སྙིང་པོར་དྲིལ་བའི་ལེགས་བཤད
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 178
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
